complete photo list

--- a/Angular/ui/angular146/src/app/app.component.html
+++ b/Angular/ui/angular146/src/app/app.component.html
@@ -1,2 +1,21 @@
-<h1>hello</h1>
+<div class = "container">
+  <h3 class="d-flex justify-content-center">Photo App Demo</h3>
+  <h5 class="d-flex justify-content-center">Photos</h5>
+
+  <nav class="navbar navbar-expand-sm bg-light navbar-dark">
+
+    <ul class = "navbar-nav">
+      <li class="nav-item">
+        <button routerLink="album" class="m-1 btn btn-light btn-outline-primary" Button>
+          albums
+        </button>
+      </li>
+      <li class="nav-item">
+        <button routerLink="photo" class="m-1 btn btn-light btn-outline-primary" Button>
+          Photos
+        </button>
+      </li>
+    </ul>
+  </nav>
+</div>
 <router-outlet></router-outlet>
