--- a/Angular/ui/angular146/src/app/photo/show-photos/show-photos.component.html
+++ b/Angular/ui/angular146/src/app/photo/show-photos/show-photos.component.html
@@ -1,3 +1,34 @@
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal"
+(click)="addClick()"
+data-backdrop="static" data-keyboard="false">
+  Add Photo
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-xl">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">{{ModalTitle}}</h5>
+        <button type="button" class="close"
+         data-dismiss="modal" aria-label="Close"
+         (click)="closeClick()">
+          <span aria-hidden="true"> &times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <app-add-edit-photo [photo] = "photo" *ngIf="ActivateAddEditPhotoComp">
+        </app-add-edit-photo>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 <table class="table table-striped">
   <thead>
     <tr>
@@ -27,12 +58,18 @@
          {{dataItem.DateOfUpload}}
       </td>
       <td>
-        <button type="button" class="btn btn-light mr-1">
-          Edit
-        </button>
-        <button type="button" class="btn btn-light mr-1">
-          Delete
-        </button>
+        <button type="button" class="btn btn-light mr-1"
+        data-bs-toggle="modal" data-bs-target="#exampleModal"
+(click)="editClick(dataItem)"
+data-backdrop="static" data-keyboard="false">
+  Edit Photo
+</button>
+        <button type="button" class="btn btn-light mr-1"data-bs-toggle="modal" data-bs-target="#exampleModal"
+        (click)="addClick()"
+        data-backdrop="static" data-keyboard="false">
+          Delete Photo
+        </button>>
+
       </td>
     </tr>
   </tbody>
